# chess_checker_telegram_bot

./: .gitignore  Cargo.toml  README.md
src/: chessboard.rs  chessboard_datatypes.rs  image_gen.rs  main.rs  pgn_parser.rs
tools/: split_pgn_database.py
